[gd_scene load_steps=5 format=2]

[ext_resource path="res://map/terrain/generate_map.gd" type="Script" id=1]
[ext_resource path="res://map/terrain/road_mesh_library.tres" type="MeshLibrary" id=2]
[ext_resource path="res://map/terrain/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://map/town/scenes/town.tscn" type="PackedScene" id=4]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )
map_size = 5
tile_size = 60

[node name="TownMesh" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.60464, -0.95, 3.98097 )

[node name="Floor" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -0.95, 3 )

[node name="GridMaps" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.95, 1 )

[node name="RoadGridMap" type="GridMap" parent="GridMaps"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}
